deal with text bugs